Define server.port=0 para usar porta aleatória nos testes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=vertical_logistica
 
-#spring.datasource.url=jdbc:h2:mem:tempdb
-spring.datasource.url=jdbc:h2:file:./data/tempdb
+spring.datasource.url=jdbc:h2:mem:tempdb
+#spring.datasource.url=jdbc:h2:file:./data/tempdb
 spring.datasource.username=admin
 spring.datasource.password=
 
@@ -10,3 +10,5 @@ spring.h2.console.path=/h2-console
 
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql=true
+
+server.port=0
